fix(v-text-field): added proper text wrap

--- a/src/stylus/components/_text-fields.styl
+++ b/src/stylus/components/_text-fields.styl
@@ -17,9 +17,7 @@ theme(v-input--text, "v-input--text")
     display: flex
     flex: 1 0 auto
     justify-content: space-between
-
-    .v-messages
-      flex-grow: 1
+    max-width: 100%
 
   &__prefix,
   &__suffix
